# C21-TP3-SIMON

./: CMakeLists.txt  CMakePresets.json  README.md  package.sh
.zed/: tasks.json
cmake/toolchains/: mingw64.cmake
homework/TP3_etudiants/: C21_LAB_3_Base.cpp
src/: liste.cpp  liste.h  main.cpp  principal.cpp  stats.cpp  stats.h  tests.txt
